# APP-X11-Forward-PyCRust-Dev-Template-Stack

./: .gitignore  README.md  _Info.txt.txt  _config.yml  index.md
Base-Container/Afx-Base-PyCRust-Service/: .env  Dockerfile_App-Forward-X11-PyCRust_Base  compose_app_forward_x11_pycrust_base.yml
Howtos/: howto_create_a_dev_container.md
Sub-Containers/: Hierarchy services.md
Sub-Containers/PyCRust-Project-Service/: .env  Docker_PyCRust_Project  compose_pycrust_project.yml  index.md
Sub-Containers/PyCRust-Project-Service/Project-Templates/GUI-Application/: .env  main.py
Sub-Containers/PyCRust-Project-Service/Project-Templates/GUI-Application/src_backend/: Cargo.toml
Sub-Containers/PyCRust-Project-Service/Project-Templates/GUI-Application/src_backend/api_interface_rust/: _README.txt
Sub-Containers/PyCRust-Project-Service/Project-Templates/GUI-Application/src_backend/api_interface_rust/core_lib/: Cargo.toml  _README.txt  build.rs
Sub-Containers/PyCRust-Project-Service/Project-Templates/GUI-Application/src_backend/api_interface_rust/core_lib/src/: _README.txt  bridge.rs  lib.rs  lib_extern_c.rs
Sub-Containers/PyCRust-Project-Service/Project-Templates/GUI-Application/src_backend/api_interface_rust/core_lib/src/external_lib_cpp/: example.c++
Sub-Containers/PyCRust-Project-Service/Project-Templates/GUI-Application/src_backend/api_interface_rust/core_lib/src/external_lib_cpp/headers/: example.h
Sub-Containers/PyCRust-Project-Service/Project-Templates/GUI-Application/src_backend/api_interface_rust/core_lib/src/loader_external_lib_interface/: _README.txt  imp_library_loader.rs  mod.rs
Sub-Containers/PyCRust-Project-Service/Project-Templates/GUI-Application/src_backend/api_interface_rust/tool_lib/: Cargo.toml
Sub-Containers/PyCRust-Project-Service/Project-Templates/GUI-Application/src_backend/api_interface_rust/tool_lib/src/: lib.rs
Sub-Containers/PyCRust-Project-Service/Project-Templates/GUI-Application/src_backend/load_libraries/: _README.txt  __init__.py  generic_rust_library.py  rust_lib_core.py
Sub-Containers/PyCRust-Project-Service/Project-Templates/GUI-Application/src_frontend/: __init__.py
