[package]
# See: REMARK 1. Name convention!
name = "tool_lib"
version = "0.1.0"
edition = "2021"

[dependencies]

[lib]
# REMARK 2
# Important: To use be able to use in a Rust client(test) application we need to add "lib", this creates a 'Rust static library' (extension .rlib)
# The "staticlib" definition creates a pure static library without Rust spcifics, usable for other languages (C/C++). extension is: .a or .lib
crate-type = ["cdylib", "lib"]


# PROFILES SHOULD BE IN THE WORKSPACE ONLY
# [profile.dev]
# [profile.dev]  debug = true  # Default in dev profile